# CountSquares

./: CMakeLists.txt  build.bat
code/doc/: problem.md
code/include/Squares/: Export.h  Squares.h
code/src/: CMakeLists.txt  Squares.cpp
code/src/include/Squares/: Export.h
code/tst/: CMakeLists.txt  test_main.cpp  test_squares.cpp
